--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,18 @@ Werkzeug==2.0.2
 Jinja2==3.0.3
 itsdangerous==2.0.1
 MarkupSafe==2.0.1
+cffi==1.15.0
+click==8.0.3
+colorama==0.4.4
+et-xmlfile==1.1.0
+importlib-metadata==4.8.2
+livereload==2.6.3
+openpyxl==3.0.9
+pycparser==2.21
+PyMySQL==1.0.2
+python-dateutil==2.8.2
+pytz==2021.3
+six==1.16.0
+tornado==6.1
+typing_extensions==4.0.1
+zipp==3.6.0
