--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,7 @@ six==1.16.0
 tornado==6.1
 typing_extensions==4.0.1
 zipp==3.6.0
+certifi==0.0.8
+chardet==1.0.1
+distribute==0.6.24
+requests==0.11.1
