--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ numpy==1.21.4
 gunicorn==20.0.4
 Werkzeug==2.0.2
 Jinja2==3.0.3
+Cython==0.29.21
 itsdangerous==2.0.1
 MarkupSafe==2.0.1
 scikit_learn==0.22.1
